chandeliers-lus/tests/fail/ui/tc/when-on-const.rs
chandeliers_lus::decl! {
    const X : int when b = 0;
}

fn main() {}
